--- a/config.json
+++ b/config.json
@@ -35,7 +35,7 @@
                 //["MinProtocol", "TLSv1.3"]
             ]
         }
-    ],
+    ],*/
     "db_clients": [
         {
             //name: Name of the client,'default' by default
@@ -51,9 +51,9 @@
             //dbname: Database name
             "dbname": "test",
             //user: 'postgres' by default
-            "user": "",
+            "user": "postgres",
             //passwd: '' by default
-            "passwd": "",
+            "passwd": "passwd",
             //is_fast: false by default, if it is true, the client is faster but user can't call
             //any synchronous interface of it.
             "is_fast": false,
@@ -73,7 +73,7 @@
             //For more information, see https://www.postgresql.org/docs/16/libpq-connect.html#LIBPQ-CONNECT-OPTIONS
             //"connect_options": { "statement_timeout": "1s" }
         }
-    ],
+    ], /*
     "redis_clients": [
         {
             //name: Name of the client,'default' by default
