chore: add libbcrypt as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "third_party/jwt-cpp"]
 	path = third_party/jwt-cpp
-	url = https://github.com/Thalhammer/jwt-cpp.git
+	url = https://github.com/Thalhammer/jwt-cpp
+[submodule "third_party/libbcrypt"]
+	path = third_party/libbcrypt
+	url = https://github.com/trusch/libbcrypt
