chore: add submodules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,6 +31,18 @@ add_executable(${PROJECT_NAME} main.cc)
 find_package(Drogon CONFIG REQUIRED)
 target_link_libraries(${PROJECT_NAME} PRIVATE Drogon::Drogon)
 
+# https://github.com/Thalhammer/jwt-cpp
+# project config.cmake installs onto wrong dir
+# had to be linked locally
+add_subdirectory(third_party/jwt-cpp)
+target_link_libraries(${PROJECT_NAME} PRIVATE jwt-cpp)
+
+# https://github.com/trusch/libbcrypt
+# project doesn't have config.cmake file
+# linking locally is easier
+add_subdirectory(third_party/libbcrypt)
+target_link_libraries(${PROJECT_NAME} PRIVATE bcrypt)
+
 # ##############################################################################
 
 if (CMAKE_CXX_STANDARD LESS 17)
@@ -45,6 +57,7 @@ aux_source_directory(controllers CTL_SRC)
 aux_source_directory(filters FILTER_SRC)
 aux_source_directory(plugins PLUGIN_SRC)
 aux_source_directory(models MODEL_SRC)
+aux_source_directory(utils UTIL_SRC)
 
 drogon_create_views(${PROJECT_NAME} ${CMAKE_CURRENT_SOURCE_DIR}/views
                     ${CMAKE_CURRENT_BINARY_DIR})
@@ -65,7 +78,8 @@ target_sources(${PROJECT_NAME}
                ${CTL_SRC}
                ${FILTER_SRC}
                ${PLUGIN_SRC}
-               ${MODEL_SRC})
+               ${MODEL_SRC}
+               ${UTIL_SRC})
 # ##############################################################################
 # uncomment the following line for dynamically loading views 
 # set_property(TARGET ${PROJECT_NAME} PROPERTY ENABLE_EXPORTS ON)
